Change Log for OpenXava project
===============================

- TinyMCE JavaScript library upgraded to 6.8.3.
- ZAP web security scanner from OWASP passed at 100%. 
- Fixed 2 critical security vulnerabilities in third party JavaScript libraries.
- Navigation in collections with buttons to see the next or previous record from the dialog.
- Content Security Policy does not allows the use of eval() in JavaScript code by default.
- New property unsafeEvalInScripts in xava.property to enable the use of eval() in JavaScript.
- Fix: Inoffensive string "null" in the HTML code for editors.
- Customization documentation adapted to no script inclusion in HTML editor code.  
- DWR engine tuned to remove the use of eval() in its JavaScript code.
- DWR upgraded to 3.0.2.
- has-type/has-annotation/has-stereotype in for-tabs of editors.xml to discriminate list formats by entity.
- MySQL and MS SQL Server configuration documentation includes video.
- Documentation for database configuration improved to include schema/database creation.
- Year navigation buttons added to calendar list format for fast year navigation to distant dates.
- When several dates in an entity the user can choose which to use in calendar list format with a combo.
- Reverse engineering documentation includes video.
- Drag & drop support for calendar list format.
- Removed the use of eval() and equivalents completely from OpenXava JavaScript code.
- AS/400 connection documentation improved to cover performance problems in Windows Server.
- The width of the calendar in list mode dynamically adjusts to occupy the entire available space.

OpenXava 7.2.3 (2024-1-26)
--------------------------
- Some new common use labels to be used in applications.
- Warning in the log or exception thrown if failOnAnnotationMisuse=true if using @Condition for @ManyToMany.
- Warning message in log when an old version of OpenXava is being used.
- Groovy upgraded to 4.0.17.
- Embedded Tomcat used in development upgraded to 9.0.85.