@@ -4,4 +4,15 @@
 
 <web-app>
   <display-name>OpenXava Application</display-name>
+  
+  <!-- To be compliant with OWASP -->
+  <error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/error404.html</location>
+  </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/WEB-INF/error500.html</location>
+  </error-page>
+  
 </web-app>
