@@ -1,6 +1,9 @@
 Change Log for OpenXava project
 ===============================
 
+- 
+- Archetypes for creating new projects has error pages and cookies configuration compatible with OWASP.
+ 
 - TinyMCE JavaScript library upgraded to 6.8.3.
 - ZAP web security scanner from OWASP passed at 100%. 
 - Fixed 2 critical security vulnerabilities in third party JavaScript libraries.
